# bpfwavelet

./: .gitignore  .gitmodules  Makefile  README.md  bpfwavelet_pcap  check.py  compile_flags.txt  disable-dynamic-cpu-features.sh  install-trex.sh  main.py  pyproject.toml  requirements.txt  result.json  run-bench.sh  traffic_profile.py  visualize.ipynb
bench/: README.md  diff_counters_inner.sh  enable-hugepages.sh  install-trex.sh  monitor_counters.sh  monitor_counters_inner.sh  ndr.py  pdr.py  pyproject.toml  run-bench.sh  set_driver_parameters.sh  set_irq_affinity.sh  set_rss.sh  start-trex-veth-pair.sh
bench-analysis/: README.md  debug.ipynb  pyproject.toml  visualize.ipynb  visualize.py
check/: pyproject.toml
src/: Makefile  README.md  bpfwavelet.bpf.c  bpfwavelet.c  bpfwavelet.h  compile_flags.txt  wavelets.bpf.c  wavelets.c  wavelets.h
tests/: run
validate/: README.md  analysis.ipynb  bpfwavelet_pcap  isolate-heartbleed  pyproject.toml  run  run1  run2  run3
