[project]
name = "xdp-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "itables>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[tool.pyright]
extraPaths = [ "/opt/trex/current/trex_client/interactive" ]
